kubernetes/mcp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-mcp-server
  namespace: mcp
  labels:
    app: kubernetes-mcp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-mcp-server
  template:
    metadata:
      labels:
        app: kubernetes-mcp-server
    spec:
      serviceAccountName: kubernetes-mcp-server
      volumes:
        - name: kubeconfig
          configMap:
            name: kubernetes-mcp-server-kubeconfig
      serviceAccount: kubernetes-mcp-server
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: server
          image: ghcr.io/jonasgovaerts/kubernetes_mcp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
              name: mcp
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
